<resources>
    <string name="app_name">Project_Smart_City</string>
    <string name="socials_network">Social Network</string>
    <string name="bottom_navigation_menu_home">Home</string>
    <string name="bottom_navigation_menu_commerce">Shopping</string>
    <string name="bottom_navigation_menu_network">Networks</string>
    <string name="bottom_navigation_menu_profil">Profile</string>
    <string name="title_news">News</string>
    <string name="title_profil">Profile</string>
    <string name="title_network">Network</string>
    <string name="title_shopping">Shopping</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="stayConnected">Remember me</string>
    <string name="create">Create</string>
    <string name="private1">Private</string>
    <string name="public1">Public</string>
    <string name="statut">Status</string>
    <string name="network_name">Network_name</string>
    <string name="network_description">Network_description</string>
    <string name="create_network">Create network</string>
    <string name="inscription">INSCRIPTION</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight (kg)</string>
    <string name="size_cm">Size (cm)</string>
    <string name="pseudo">Pseudo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="informations_personnelles">Personal information</string>
    <string name="informations_compl_mentaires">Additional information</string>
    <string name="votre_adresse_mail_svp">you.addr@mail.please</string>
    <string name="name">Surname</string>
    <string name="pr_nom">Name</string>
    <string name="create_your_network">Create your network</string>
    <string name="people">People</string>
    <string name="nom">Name</string>
    <string name="desription">Description</string>
    <string name="network">NETWORK</string>
    <string name="your_available_networks">Your available networks</string>
    <string name="current_adr_mail">current@adr.mail</string>
    <string name="enregistrer_ces_changements">Save these changes</string>
    <string name="poids">Weight</string>
    <string name="taille">Size</string>
    <string name="gerer_vos_pref">Manage your choices</string>
    <string name="intro_change">You can change them whenever you want</string>
    <string name="makeChoices">Make your choices</string>
    <string name="saveInterests">Save your interests</string>
    <string name="save_and_SignIn"><![CDATA[Save & join Smart City !]]></string>
    <string name="interests">Interests</string>
    <string name="you_can_change_int">You can change your interests whenever you want to.</string>
    <string name="by_local">By localisation</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="delete_this_network">Delete this Network</string>
    <string name="pending_membership_requests">Pending membership requests</string>
    <string name="what_would_you_like_to_share_with_us_today">What would you like to share with us today ?</string>
    <string name="post">Post</string>
    <string name="menu_network">menu_network</string>
    <string name="delete_network">Delete this network</string>
    <string name="leave_network">Leave this network</string>
    <string name="sexe">Sex</string>
    <string name="g_rer_vos_pr_f_rences">Manage you interests</string>
    <string name="tap_the_image_to_change_it">Tap the image to change it</string>
    <string name="profilpicture">profilePicture</string>
    <string name="logout">LogOut</string>
    <string name="fade">fade</string>
    <string name="manageinterest">manageInterest</string>
    <string name="shops_avalaible">Shops available</string>
    <string name="annuaire">Annuaire</string>
    <string name="recherche">Searching</string>
    <string name="air_max_tn_raint_90">Air Max TN, RaiNté 90</string>
    <string name="un_petit_peu_de_text_pour_d_crire_ce_magnifique_produit">Un petit peu de text pour décrire ce magnifique produit</string>
    <string name="_99_99">99,99 €</string>
    <string name="le_prix_des_p_tes_toujours_en_hausse_nle_confiment_ayant_favoris_la_consomation_de_confiements_cette_denr_e_rare_a_vu_sont_prix_presque_tripler_chez_certaines_enseignes">Le prix des pâtes toujours en hausse !  Le confiment ayant favorisé la consommation de condiments, cette denrée rare a vu sont prix presque triplé chez certaines enseignes.</string>
    <string name="ouverture_de_l_cole_maternelle_n_elle_aurait_du_r_ouvrir_le_11_mai_comme_nous_l_avait_dit_notre_pr_sident_emmanuel_macron_mais_en_raison_d_un_taux_d_absent_isme_plus_fort_que_lors_des_dernieres_lections_pr_sidentielles_la_r_ouverture_a_t_reprogramm_e_pour_le_31_novembre_2020">Ouverture de l\'école maternelle !  Elle aurait du réouvrir le 11 mai comme nous l\'avait dit notre président Emmanuel Macron mais, en raison d\'un taux d\'absentéisme plus fort que celui des dernieres élections présidentielles, la réouverture a été reprogrammée pour le 31 novembre 2020.</string>
    <string name="ecole">TODO</string>
    <string name="huuum">TODO</string>
    <string name="weather">WEATHER</string>
    <string name="saint_marcel_d_ardeche">SAINT MARCEL D ARDECHE</string>
    <string name="_9_c">9°C</string>
    <string name="feels_like_7_c">Feels like 7°C</string>
    <string name="visibility_100">Visibility : 100%</string>
    <string name="wind_30km_h">Wind : 30km/h</string>
    <string name="clear_sky">Clear Sky</string>
</resources>
