<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weather_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/weather"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <View
        android:id="@+id/divider10"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/saint_marcel_d_ardeche"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/_9_c"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <TextView
                android:id="@+id/feelslike"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/feels_like_7_c"
                tools:ignore="NestedWeights" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/visibility_100"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_30km_h" />

            <TextView
                android:id="@+id/main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/clear_sky"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="italic" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider12"
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary" />

</LinearLayout>