<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_networkMainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/fragment_scrollViewPageOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/network"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/design_default_color_primary_dark" />

            <View
                android:id="@+id/divider9"
                android:layout_width="78dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dip"
                android:background="@color/colorPrimary" />

            <SearchView
                android:id="@+id/network_searchView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dip">

            </SearchView>

            <ScrollView
                android:id="@+id/scrollViewResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border">

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="80dp"
                                android:layout_height="match_parent"
                                android:background="@drawable/border" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="146dp"
                                android:layout_height="match_parent"
                                android:background="@drawable/border" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="71dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/border" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="50dp"
                                android:layout_height="match_parent"
                                android:background="@drawable/border" />

                        </TableRow>

                    </TableLayout>
                </LinearLayout>
            </ScrollView>

            <Button
                android:id="@+id/network_createBtn"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border"
                android:fontFamily="casual"
                android:onClick="onClickCreateNetwork"
                android:text="@string/create_your_network"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="serif-monospace"
                android:text="@string/your_available_networks"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border">

                    <TextView
                        android:id="@+id/network_tableName"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/nom"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/network_tableDescription"
                        android:layout_width="146dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/desription"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/network_tableStatut"
                        android:layout_width="71dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:text="@string/statut" />

                    <TextView
                        android:id="@+id/network_tableNombre"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/border"
                        android:text="@string/people" />
                </TableRow>

            </TableLayout>

            <ScrollView
                android:id="@+id/scrollViewNetWorkAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border">

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="80dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/border" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="146dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/border" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="71dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/border" />

                    </TableRow>

                </TableLayout>
            </ScrollView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>